TEST_PROGRAMS/VALID/cheuk_siow/valid2.min
# Valid program 2.

var a: float;
var b: float;
var x: float;
var y: float;
var n: int;

read a;
read b;
read x;
read y;
n = -1;

# Nested if statements
if a then
  if b then
    print (x + y) * (a - b);
  else
    print (x - y) / (a + b);
  endif
else
  print n;
endif

