TEST_PROGRAMS/INVALID/cheuk_siow/invalid4.min
# Invalid program 4: unexpected semicolon after endif.

var a: string;
var b: string;
var n: int;

a = "if statement";
b = "else statement";

read n;
if n then
  print a;
else
  print b;
endif;

